@@ -8,6 +8,9 @@ WebAuth 3.7.3 (unreleased)
     Fix LDAP attribute retrieval in WebAuth 2.x backward compatibility
     mode, which was broken in 3.7.0.
 
+    The WebAuth library also installs a pkg-config configuration file for
+    the use of software that wants to link against it.
+
 WebAuth 3.7.2 (2010-08-12)
 
     Fix wa_keyring option parsing problems introduced in 3.7.0.  Correctly
